--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,9 +1,35 @@
 <html>
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="/swenc-proxy/style.css" />
+    <title>SWENC Proxy - Login</title>
   </head>
   <body>
+    <div class="center">
+      <h1><span class="rotated">SWENC</span>Proxy</h1>
+      <p><a href="https://github.com/JorianWoltjer/swenc-proxy" target="_blank">Service Worker Encrypted Proxy</a></p>
+      <form id="form">
+        <div class="input-group">
+          <input id="key-input" class="valid-color" name="key" type="password" autocomplete="encryption-key" placeholder="[ENCRYPTION KEY]" style="text-align: center" required autofocus />
+        </div>
+        <div class="input-group" id="url-input-group">
+          <input name="url" type="text" value="https://example.com" disabled />
+          <button type="submit" disabled>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+              <!--!Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+              <path
+                d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l82.7 0L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3l0 82.7c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160c0-17.7-14.3-32-32-32L320 0zM80 32C35.8 32 0 67.8 0 112L0 432c0 44.2 35.8 80 80 80l320 0c44.2 0 80-35.8 80-80l0-112c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16L80 448c-8.8 0-16-7.2-16-16l0-320c0-8.8 7.2-16 16-16l112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L80 32z"
+              />
+            </svg>
+          </button>
+        </div>
+      </form>
+    </div>
+
     <script type="module">
+      import { derive_key, sha256 } from "/swenc-proxy/utils.js";
+
       if ("serviceWorker" in navigator) {
         if (!navigator.serviceWorker.controller) {
           navigator.serviceWorker
@@ -15,32 +41,110 @@
               console.error("ServiceWorker registration failed: ", error);
               if (navigator.userAgent.toLowerCase().includes("firefox")) {
                 alert(`ERROR: ServiceWorker registration failed!
-Since you are on Firefox, this may be due to missing 'import' support in ServiceWorkers. Please try a Chromium-based browser instead.
-(https://caniuse.com/mdn-javascript_statements_import_service_worker_support)`);
+      Since you are on Firefox, this may be due to missing 'import' support in ServiceWorkers. Please try a Chromium-based browser instead.
+      (https://caniuse.com/mdn-javascript_statements_import_service_worker_support)`);
+                throw error;
+              }
+            });
+        }
+      } else {
+        alert("ERROR: ServiceWorker not supported!");
+        throw new Error("ServiceWorker not supported!");
+      }
+
+      async function checkKey(key) {
+        key = derive_key(key);
+        const keyFingerprint = await sha256(key);
+
+        const response = await fetch("/swenc-proxy/check?" + new URLSearchParams({ key: keyFingerprint }));
+        return response.ok;
+      }
+
+      async function isKeySet() {
+        return new Promise((resolve) => {
+          navigator.serviceWorker.ready.then((registration) => {
+            navigator.serviceWorker.addEventListener("message", (event) => {
+              if (event.data.type === "isKeySet") {
+                navigator.serviceWorker.removeEventListener("message", this);
+                resolve(event.data.isSet);
               }
             });
 
-          // TODO: check key with API. maybe record fingerprint of key and store multiple
+            registration.active.postMessage({ type: "isKeySet" });
+          });
+        });
+      }
+
+      const form = document.getElementById("form");
+      const keyInput = document.getElementById("key-input");
+      const urlInputGroup = document.getElementById("url-input-group");
+
+      if (await isKeySet()) {
+        keyInput.setAttribute("disabled", "");
+        keyInput.value = "****************";
+        urlInputGroup.querySelector("input").removeAttribute("disabled");
+        urlInputGroup.querySelector("button").removeAttribute("disabled");
+        urlInputGroup.querySelector("input").focus();
+        urlInputGroup.querySelector("input").select();
+      } else {
+        keyInput.focus();
+      }
+
+      keyInput.addEventListener("keydown", (event) => {
+        if (event.key === "Enter") {
+          event.preventDefault();
+          keyInput.dispatchEvent(new Event("change"));
+        } else if (event.key === "Tab") {
+          event.preventDefault();
+          keyInput.dispatchEvent(new Event("change"));
+          event.target.blur();
+          urlInputGroup.querySelector("input").focus();
+        }
+      });
+
+      keyInput.addEventListener("change", async () => {
+        const key = keyInput.value;
+
+        if (await checkKey(key)) {
+          keyInput.setCustomValidity("");
+          urlInputGroup.querySelector("input").removeAttribute("disabled");
+          urlInputGroup.querySelector("button").removeAttribute("disabled");
+          const input = urlInputGroup.querySelector("input");
+          input.focus();
+          input.select();
+
           navigator.serviceWorker.ready.then((registration) => {
             registration.active.postMessage({
               type: "setKey",
-              key: prompt("Enter the encryption key:"),
+              key,
             });
           });
+        } else {
+          keyInput.setCustomValidity("Invalid key");
+          urlInputGroup.querySelector("input").setAttribute("disabled", "");
+          urlInputGroup.querySelector("button").setAttribute("disabled", "");
         }
-      }
+      });
 
-      document.getElementById("form").addEventListener("submit", (event) => {
+      form.addEventListener("submit", (event) => {
         event.preventDefault();
-        const url = event.target.url.value;
+        let url = event.target.url.value;
+        // Try parsing URL, add protocol if missing
+        try {
+          url = new URL(url);
+        } catch (error) {
+          try {
+            url = new URL("https://" + url);
+          } catch (error) {
+            urlInputGroup.querySelector("input").setCustomValidity("Invalid URL");
+            console.error(error);
+            return;
+          }
+        }
+
         // No need to set targetOrigin yet, because absolute URL here
         location.href = new URL("/swenc-proxy/url?" + new URLSearchParams({ url }), location.origin).href;
       });
     </script>
-    <form id="form">
-      <label for="url">URL:</label>
-      <input name="url" type="text" value="https://example.com" />
-      <button type="submit">Go!</button>
-    </form>
   </body>
 </html>
