Fix redirection during navigation. Also add docs

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
           <input id="key-input" class="valid-color" name="key" type="password" autocomplete="encryption-key" placeholder="[ENCRYPTION KEY]" style="text-align: center" required autofocus />
         </div>
         <div class="input-group" id="url-input-group">
-          <input name="url" type="text" value="https://example.com" disabled />
+          <input name="url" type="text" value="https://www.google.com" disabled />
           <button type="submit" disabled>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <!--!Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
